--- a/exercicies/bloco_3/dia_2/desafio2.html
+++ b/exercicies/bloco_3/dia_2/desafio2.html
@@ -5,36 +5,10 @@
     <meta charset="UTF-8">
     <title>HTML</title>
     <style>
-        h1{
-            font-family: sans-serif;
-            font-style: oblique;
-
-        }
-
-        p {
-         text-align: center;
-         line-height: 0ch;
-         font-weight: 600;
-         font-size:3em;
-          text-decoration: underline red;
-        }
-
-        body{
-            font-size: 16px;
-        }
-
-        #amarelo{
-            background-color: yellow;
-        }
-        #vermelho{
-            background-color: red;
-        }
-        #marrom{
-            background-color: brown;
-        }
-
+        
      
     </style>
+    <link rel="stylesheet" href="style.css" type="text/css">
   </head>
   <body>
     <h1>Exercícios 3.2</h1>
