--- a/Desenvolvimento Front-End/bloco16_gerenciamento_estado_redux/dia_01_introdução_redux_estadoGlobal/exerc1.html
+++ b/Desenvolvimento Front-End/bloco16_gerenciamento_estado_redux/dia_01_introdução_redux_estadoGlobal/exerc1.html
@@ -11,7 +11,6 @@
         margin: 0;
         padding: 0;
       }
-
       #container {
         height: 100%;
         display: flex;
@@ -19,7 +18,6 @@
         justify-content: center;
         align-items: center;
       }
-
       button {
         height: 50px;
         width: 200px;
@@ -39,23 +37,7 @@
         index: 0,
       };
       function criarCor() {
-        const oneChar = [
-          '1',
-          '2',
-          '3',
-          '4',
-          '5',
-          '6',
-          '7',
-          '8',
-          '9',
-          'A',
-          'B',
-          'C',
-          'D',
-          'E',
-          'F',
-        ];
+        const oneChar = ['1','2','3','4','5','6','7','8','9','A','B','C','D','E','F'];
         let cor = '#';
         const aleatorio = () => Math.floor(Math.random() * oneChar.length);
         for (let i = 0; i < 6; i += 1) {
@@ -70,7 +52,7 @@
             return {
               ...state,
               index:
-                state.index < state.colors.length - 1 ? state.index + 1 : 0,
+                state.index < state.colors.length -1 ? state.index +1 : 0,
             };
           case 'PREVIOUS_COLOR':
             return {
@@ -105,7 +87,6 @@
         window.__REDUX_DEVTOOLS_EXTENSION__ &&
           window.__REDUX_DEVTOOLS_EXTENSION__()
       );
-
       store.subscribe(() => {
         const span = document.querySelector('#value');
         const div = document.querySelector('#container');
